# dreal4

./: .bazelrc  .gitignore  BAZEL_MODULE_MIGRATION.md  BUILD.bazel  CPPLINT.cfg  Dockerfile  Dockerfile.amazonlinux  MODULE.bazel  README.md  WORKSPACE  setup.py
.github/workflows/: check_install.yml  docker.yml  macos.yml  ubuntu.yml
docs/: BuildOnFedora.md  boolean_literals_in_learned_clauses.md
dreal/: BUILD.bazel  __init__.py  dreal_main.cc  dreal_py.cc  workspace.bzl
dreal/contractor/: BUILD.bazel  contractor.cc  contractor_fixpoint.cc  contractor_ibex_fwdbwd.cc  contractor_join.cc  contractor_seq.cc  contractor_status.cc  contractor_worklist_fixpoint.cc  counterexample_refiner.cc  generic_contractor_generator.cc
dreal/contractor/test/: contractor_ibex_fwdbwd_test.cc
dreal/dr/: BUILD.bazel  dr_lexer.cc  dr_lexer.h  dr_parser.cc  dr_parser.h  run.cc
dreal/optimization/: BUILD.bazel  nlopt_optimizer.cc
dreal/smt2/: BUILD.bazel  driver.cc  driver.h  parser.yy  run.cc  smt2_lexer.cc  smt2_lexer.h  smt2_parser.cc  smt2_parser.h  term.cc
dreal/smt2/test/: BUILD.bazel  smt2_parser_test.cc
dreal/solver/: BUILD.bazel  brancher.cc  brancher.h  brancher_gnn.cc  brancher_gnn.h  config.cc  config.h  context_impl.cc  expression_evaluator.cc  forall_formula_evaluator.cc  icp.cc  icp.h  icp_parallel.cc  icp_parallel.h  icp_seq.cc  icp_seq.h  icp_stat.cc  sat_solver.cc  sat_solver.h  theory_solver.cc
dreal/solver/test/: brancher_gnn_test.cc  config_test.cc  expression_evaluator_test.cc
dreal/symbolic/: BUILD.bazel  symbolic.cc  symbolic_fmt.h
dreal/test/python/: api_test.py
dreal/test/smt2/: BUILD.bazel  define_fun_let_01.smt2  define_fun_let_02.smt2  define_fun_let_03.smt2  define_fun_let_04.smt2  define_fun_let_05.smt2  define_fun_let_06.smt2  define_fun_let_07.smt2  disjunct_order_01.smt2  disjunct_order_02.smt2  disjunct_order_03.smt2  hex_binary_literals.smt2  issue324_01.smt2  issue324_02.smt2  issue324_03.smt2  issue324_04.smt2  issue324_05.smt2  issue324_06.smt2  issue324_07.smt2  issue324_08.smt2  neg_literal_01.smt2  neg_literal_02.smt2  neg_literal_03.smt2  neg_literal_04.smt2  neg_literal_05.smt2  option_local_optimization.smt2  option_polytope.smt2  option_precision.smt2  option_produce_models.smt2  option_produce_models.smt2.expected  option_produce_models_underscore.smt2  option_smtlib2_compliant.smt2  option_worklist_fixpoint.smt2  pow_overflow_01.smt2  pow_overflow_02.smt2  pow_underflow_01.smt2  pow_underflow_02.smt2
dreal/util/: BUILD.bazel  box.cc  box.h  box_fmt.h  dynamic_bitset.h  fmt.h  ibex_converter.cc  if_then_else_eliminator.cc  logging.h  optional.h  predicate_abstractor.cc  string_to_interval.cc  tseitin_cnfizer.cc
dreal/util/test/: timer_test.cc
scripts/: build_python_bindings.sh  run-clang-tidy.sh  update_dreal_version.sh  upload_deb_to_github.sh
setup/mac/: install_prereqs.sh
setup/ubuntu/18.04/: install_prereqs.sh
setup/ubuntu/20.04/: install_prereqs.sh
setup/ubuntu/22.04/: install_prereqs.sh
setup/ubuntu/24.04/: install.sh  install_prereqs.sh
test/: BUILD.bazel  abseil_test.cc  cadical_test.cc  ibex_test.cc
tools/: BUILD  cadical.BUILD.bazel  dreal.bzl  fmt.BUILD.bazel  google_styleguide.BUILD.bazel  ibex.BUILD.tpl  json.BUILD.bazel  libtorch.BUILD.bazel  local_config_python.bzl  nlopt.BUILD.tpl  pybind11.BUILD.bazel  pycodestyle.BUILD.bazel
