cc_library(
    name = "libtorch",
    srcs = glob(
        ["lib/lib*.so*"],
        exclude = [
            "lib/libtorch_python.so",
            "lib/libnnapi_backend.so",
        ],
    ),
    hdrs = glob([
        "include/ATen/**",
        "include/c10/**",
        "include/caffe2/**",
        "include/torch/**",
        "include/torch/csrc/**",
        "include/torch/csrc/jit/**",
        "include/torch/csrc/api/include/**",
    ]),
    includes = [
        "include",
        "include/torch/csrc/api/include",
    ],
    linkopts = [
        "-ldl",
    ],
    visibility = ["//visibility:public"],
)
