load("//third_party/com_github_robotlocomotion_drake:tools/workspace/cpplint.bzl", "cpplint")
load("//tools:dreal.bzl", "dreal_cc_library")

package(default_visibility = ["//visibility:private"])

dreal_cc_library(
    name = "dr_lexer",
    srcs = ["dr_lexer.cc"],
    hdrs = ["dr_lexer.h"],
    deps = [],
)

dreal_cc_library(
    name = "dr_parser",
    srcs = ["dr_parser.cc"],
    hdrs = ["dr_parser.h"],
    deps = [
        ":dr_lexer",
        "//dreal/solver",
        "//dreal/symbolic",
        "//dreal/util:exception",
    ],
)

dreal_cc_library(
    name = "dr",
    srcs = ["run.cc"],
    hdrs = ["run.h"],
    visibility = ["//dreal:__pkg__"],
    deps = [
        ":dr_parser",
        "//dreal/util:logging",
    ],
)

cpplint()

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])
