load("//third_party/com_github_robotlocomotion_drake:tools/workspace/cpplint.bzl", "cpplint")
load(
    "//tools:dreal.bzl",
    "dreal_cc_library",
)
load("@rules_pkg//:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:private"])

dreal_cc_library(
    name = "sort",
    srcs = [
        "sort.cc",
    ],
    hdrs = [
        "sort.h",
    ],
    visibility = ["//dreal/solver:__pkg__"],
    deps = [
        "//dreal/symbolic",
        "//dreal/util:exception",
    ],
)

dreal_cc_library(
    name = "term",
    srcs = [
        "term.cc",
    ],
    hdrs = [
        "term.h",
    ],
    deps = [
        ":sort",
        "//dreal/symbolic",
        "//dreal/util:exception",
    ],
)

dreal_cc_library(
    name = "logic",
    srcs = [
        "logic.cc",
    ],
    hdrs = [
        "logic.h",
    ],
    visibility = [
        "//dreal/solver:__pkg__",
        "//dreal/util:__pkg__",
    ],
    deps = [
        "//dreal/util:exception",
    ],
)

dreal_cc_library(
    name = "smt2_lexer",
    srcs = ["smt2_lexer.cc"],
    hdrs = ["smt2_lexer.h"],
    deps = [],
)

dreal_cc_library(
    name = "smt2_parser",
    srcs = ["smt2_parser.cc"],
    hdrs = ["smt2_parser.h"],
    visibility = ["//dreal/smt2/test:__pkg__"],
    deps = [
        ":logic",
        ":smt2_lexer",
        ":term",
        "//dreal/solver",
        "//dreal/symbolic",
        "//dreal/symbolic:prefix_printer",
        "//dreal/util:exception",
        "//dreal/util:precision_guard",
        "//dreal/util:string_to_interval",
        "@gmp",
    ],
)

dreal_cc_library(
    name = "smt2",
    srcs = ["run.cc"],
    hdrs = ["run.h"],
    visibility = [
        "//dreal:__pkg__",
        "//dreal/solver:__pkg__",
    ],
    deps = [
        ":smt2_parser",
        "//dreal/util:logging",
    ],
)

# ----------------------
# Header files to expose
# ----------------------

filegroup(
    name = "headers",
    srcs = [
        "logic.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

pkg_tar(
    name = "package_headers",
    srcs = [
        ":headers",
    ],
    extension = "tar.gz",
    package_dir = "include/dreal/smt2",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

cpplint()

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])
